--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,15 @@ spring.jpa.properties.hibernate.hb2dll.auto = update
 logging.level.org.hibernate.SQL=DEBUG
 
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+#spring.datasource.url = jdbc:postgresql://103.28.36.108:2083/nhprortg_tms
+#
+#spring.datasource.username = nhprortg_proposaldb
+#
+#spring.datasource.password = bakien03
+#
+#spring.jpa.hibernate.ddl-auto = none
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
