--- a/pom.xml
+++ b/pom.xml
@@ -317,7 +317,7 @@
         <dependency>
     		<groupId>org.postgresql</groupId>
     		<artifactId>postgresql</artifactId>
-    		<version>9.4-1201-jdbc41</version>
+    		<version>42.1.4</version>
 		</dependency>
         
     </dependencies>
