--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #
 #spring.datasource.password = bakien03
 #
-spring.jpa.hibernate.ddl-auto = create 
+#spring.jpa.hibernate.ddl-auto = none
 #
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
